Fix item being covered by header

--- a/node-only/src/styles/_base.scss
+++ b/node-only/src/styles/_base.scss
@@ -20,6 +20,7 @@ footer {
 }
 #message_list {
   margin: 0 8px 8px 8px;
+  padding-top: 120px;
 }
 mark {
   background-color: yellow;
